@@ -1,0 +1,3 @@
+@comment $NetBSD: PLIST,v 1.1 2015/06/06 05:26:55 manu Exp $
+${PEAR_LIB}/Net/LDAP3/Result.php
+${PEAR_LIB}/Net/LDAP3.php
